**  denotes quite substantial/important changes
*** denotes really big changes 

Liable to change in future release:
- method="GCV.Cp" as default in gam. Default will 
  change to "REML". (1.8-24, June 2018) 

Currently deprecated and liable to be removed:
- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2017)
- discrete method prediction from discrete bam objects fitted before 1.8-32 

Issues: 

* openblas 0.3.x x<7 is not thread safe if itself compiled for single thread 
   use and then called from multiple threads (unlike the reference BLAS, say).
   0.2.20 appears to be OK. For 0.3.x x>6 make USE_THREAD=0 USE_LOCKING=1
   to make openblas ensures thread safety.

* .C can't use R's long vectors, which can lead to bam failing on very large
  datasets. probably requires extensive re-writing using .Call.

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized. Also there is no option to use the identical
  discretization to that used in fitting when predicting.

1.9-0

*** NCV smoothing parameter estimation now available for most models. See ?NCV.

*** 'gfam' allows reponse variables to be from several different families. 

* 'multinom' variance fix for K>=3 cases. A counter was initialized in the wrong
  place. Thanks to Max Goplerud for finding and reporting this.

* NCV variance estimation improvements + na handling.

* 'in.out' argument added for 'bam'.

* slight internal change to mgcv:::get.var to enable user defined functions 
  in arguments of smooths to work. 

* smooth2random tweak to guarantee same eigenvector sign everytime for same 
  problem (needed by some developers who don't want to carry the original 
  transform around).

* Some unregistered methods fixes.
