@@ -8,7 +8,7 @@
    as well.}
 \usage{
 \method{plot}{gam}(x,residuals=FALSE,rug=NULL,se=TRUE,pages=0,select=NULL,scale=-1,
-         n=100,n2=40,n3=3,pers=FALSE,theta=30,phi=30,jit=FALSE,xlab=NULL,
+         n=100,n2=40,n3=3,theta=30,phi=30,jit=FALSE,xlab=NULL,
          ylab=NULL,main=NULL,ylim=NULL,xlim=NULL,too.far=0.1,
          all.terms=FALSE,shade=FALSE,shade.col="gray80",shift=0,
          trans=I,seWithMean=FALSE,unconditional=FALSE,by.resids=FALSE,
@@ -57,8 +57,6 @@ Set to 0 to have the routine leave all graphics settings as they are. }
 \item{n2}{Square root of number of points used to grid estimates of 2-d
   functions for contouring.}
 \item{n3}{Square root of number of panels to use when displaying 3 or 4 dimensional functions.}
-\item{pers}{Set to \code{TRUE} if you want perspective plots for 2-d
-  terms.}
 
 \item{theta}{One of the perspective plot angles.}
 
